# agh-przebiegi-czasowe

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
Doc/html/: _dummy_generator_8cpp.html  _dummy_generator_8cpp_source.html  _dummy_generator_8h.html  _dummy_generator_8h.js  _dummy_generator_8h_source.html  _file_reader_8cpp.html  _file_reader_8cpp_source.html  _file_reader_8h.html  _file_reader_8h.js  _file_reader_8h_source.html  _func_iterator_8cpp.html  _func_iterator_8cpp.js  _func_iterator_8cpp_source.html  _func_iterator_8h.html  _func_iterator_8h.js  _func_iterator_8h_source.html  _i_chart_8h.html  _i_chart_8h.js  _i_chart_8h_source.html  _i_reader_8h.html  _i_reader_8h.js  _i_reader_8h_source.html  _line_chart_8cpp.html  _line_chart_8cpp_source.html  _line_chart_8h.html  _line_chart_8h.js  _line_chart_8h_source.html  _recording_containers_8cpp.html  _recording_containers_8cpp_source.html  _recording_containers_8h.html  _recording_containers_8h.js  _recording_containers_8h_source.html  annotated.html  annotated_dup.js  class_dummy_1_1_func_iterator-members.html  class_dummy_1_1_func_iterator.html  class_dummy_1_1_func_iterator.js  class_dummy_1_1_generator-members.html  class_dummy_1_1_generator.html  class_dummy_1_1_generator.js  (+60 more)
Doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+15 more)
Generator/: CMakeLists.txt  main.cpp
Oscillator/: CMakeLists.txt  main.cpp
Oscillator/include/: DummyGenerator.h  FileReader.h  FuncIterator.h  IChart.h  IReader.h  LineChart.h  RecordingContainers.h  SettingsPanel.h
Oscillator/src/: DummyGenerator.cpp  FileReader.cpp  FuncIterator.cpp  LineChart.cpp  RecordingContainers.cpp  SettingsPanel.cpp
